# zariz

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
docs/: auth-ios.md
zariz/: IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  run.sh
zariz/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
zariz/backend/alembic/: README  README.md  env.py
zariz/backend/alembic/versions/: 20251024_163539_rename_claimed_to_accepted.py  a1b2c3d4e5f6_add_capacity_boxes_to_users.py  b2c3d4e5f6a7_auth_rbac_overhaul.py  c3d4e5f6a8b9_add_store_admin_fields.py  cb2739349b88_init.py
zariz/backend/app/: main.py
zariz/backend/app/api/: __init__.py  deps.py  schemas.py
zariz/backend/app/api/routes/: auth.py  couriers.py  devices.py  events.py  orders.py  stores.py
zariz/backend/app/api/routes/admin/: __init__.py  couriers.py  stores.py
zariz/backend/app/core/: config.py  logging.py  security.py
zariz/backend/app/db/: base.py  session.py
zariz/backend/app/db/models/: device.py  idempotency.py  order.py  order_event.py  store.py  store_user_membership.py  user.py  user_session.py
zariz/backend/app/services/: events.py
zariz/backend/app/worker/: push.py
zariz/backend/scripts/: manage_users.py  seed_dev.py
zariz/backend/tests/: conftest.py  test_admin_events.py  test_core_apis.py  test_events.py  test_openapi.py
zariz/backend/tests/admin/: test_admin_couriers.py  test_admin_stores.py
zariz/backend/tests/auth/: test_login.py  test_rbac.py
zariz/backend/zariz_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
zariz/dev/: money.md  (+5 more)
(+282 files in other folders)
